0.20
* Exception class adjustments:
  * Mongo::InvalidObjectID moved to BSON::InvalidObjectID
  * Mongo::InvalidDocument moved to BSON::InvalidDocument
  * Mongo::InvalidStringEncoding moved to BSON::InvalidStringEncoding
  * Mongo::InvalidName replaced by Mongo::InvalidNSName and BSON::InvalidKeyName
* BSON-related code extracted into two separate gems: bson and bson_ext (Chuck Remes).
* Extensions compile on Rubinius (Chuck Remes).
* Query :fields options allows for values of 0 to exclude fields (houdini, railsjedi).
* BSON::Binary constructor can now take a string, which will be packed into an array.
* GridFS
  * Option to delete old versions of GridFileSystem entries.
  * Filename is now optional for Grid#put.
* Removed the following deprecated items:
  * GridStore class

0.19.3 2010-4-5
* Minor fix for assert_valid_keys.

0.19.2 2010-4-5
This release fixes a major bug and is the final release
in the 0.19 series. The next release, 0.20.0, will introduce
separate gems for bson and bson_ext and may require small
changes to existing code bases. Expect that release in the next
few days.
* Fix for Grid#delete bug.
* Log messages read like valid ruby driver code.
* Cursor#has_next.
* Tests for MongoDB 1.4 features.
* Flexible index creation method with Mongo::GEO2D constant.

0.19.1 2010-3-2
* Fix for HashWithIndifferentAccess in ActiveSupport-3.0

0.19 2010-3-1
* Deprecated GridFS::GridStore. Grid and GridFileSystem classes replace
the GridFS implementation with a simpler API and vastly-improved performance.
See http://www.mongodb.org/display/DOCS/GridFS+in+Ruby for more details.
* Safe mode for Grid and GridFileSystem.
* Grid and GridFileSystem use Mime/Types to detect content type (if available)
* Connection API simplified. Use Connection.paired for pairs and Connection.from_uri to
use MongoDB's connection URI specification.
* Authentication can be saved so that reauthentication happens automatically
on reconnect.
* Raise exception if authentication fails.